--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,9 @@ SMTP_USER=
 SMTP_PASSWORD=
 EMAIL_FROM=noreply@stellaiverse.com
 EMAIL_VERIFICATION_URL=http://localhost:3000/auth/verify-email
+
+# OpenAI Configuration
+OPENAI_API_KEY=sk-your-api-key-here
+OPENAI_BASE_URL=https://api.openai.com/v1
+OPENAI_MAX_RETRIES=3
+OPENAI_RETRY_DELAY=1000
