--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: stellaiverse
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: stellaiverse
+      POSTGRES_USER: ${POSTGRES_USER:-stellaiverse}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-CHANGE_ME_IN_PRODUCTION}
+      POSTGRES_DB: ${POSTGRES_DB:-stellaiverse}
     ports:
       - "5432:5432"
     volumes:
@@ -17,19 +17,28 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    security_opt:
+      - no-new-privileges:true
+    read_only: true
+    tmpfs:
+      - /tmp
+      - /var/run/postgresql
 
   # Redis Cache
   redis:
     image: redis:7-alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD:-CHANGE_ME_IN_PRODUCTION}
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
+    security_opt:
+      - no-new-privileges:true
 
   # NestJS Application
   app:
@@ -39,11 +48,12 @@ services:
     ports:
       - "3000:3000"
     environment:
-      NODE_ENV: development
+      NODE_ENV: ${NODE_ENV:-development}
       PORT: 3000
-      DATABASE_URL: postgresql://stellaiverse:password@postgres:5432/stellaiverse
-      REDIS_URL: redis://redis:6379
-      JWT_SECRET: dev_secret_key_change_in_production
+      DATABASE_URL: postgresql://${POSTGRES_USER:-stellaiverse}:${POSTGRES_PASSWORD:-CHANGE_ME_IN_PRODUCTION}@postgres:5432/${POSTGRES_DB:-stellaiverse}
+      REDIS_URL: redis://default:${REDIS_PASSWORD:-CHANGE_ME_IN_PRODUCTION}@redis:6379
+      JWT_SECRET: ${JWT_SECRET:-GENERATE_WITH_GENERATE_SECRETS_SCRIPT}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3001}
     depends_on:
       postgres:
         condition: service_healthy
@@ -53,6 +63,11 @@ services:
       - .:/app
       - /app/node_modules
     command: npm run start:dev
+    security_opt:
+      - no-new-privileges:true
+    read_only: false
+    tmpfs:
+      - /tmp
 
 volumes:
   postgres_data:
