--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "supertest": "^6.3.3",
+    "sqlite3": "^5.1.6"
   }
 }
