--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "build:prod": "nest build --webpack"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/bull": "^11.0.4",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -36,6 +39,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.4.22",
+    "@nestjs/terminus": "^11.1.1",
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.4.22",
@@ -46,6 +50,7 @@
     "@opentelemetry/sdk-node": "^0.211.0",
     "@opentelemetry/sdk-trace-base": "^2.5.0",
     "axios": "^1.13.4",
+    "bull": "^4.16.5",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -92,12 +97,12 @@
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.1.1",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.3",
-    "supertest": "^6.3.3",
-    "sqlite3": "^5.1.6"
+    "typescript": "^5.9.3"
   }
 }
