--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "build:prod": "nest build --webpack"
   },
   "dependencies": {
+    "@nestjs/bull": "^11.0.4",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.4.22",
+    "@nestjs/swagger": "^11.2.6",
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.4.22",
@@ -46,6 +49,7 @@
     "@opentelemetry/sdk-node": "^0.211.0",
     "@opentelemetry/sdk-trace-base": "^2.5.0",
     "axios": "^1.13.4",
+    "bull": "^4.16.5",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -56,6 +60,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.9.3",
     "jsonwebtoken": "^9",
     "nodemailer": "^6.9.8",
     "openai": "^6.16.0",
@@ -92,12 +97,12 @@
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.1.1",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.3",
-    "supertest": "^6.3.3",
-    "sqlite3": "^5.1.6"
+    "typescript": "^5.9.3"
   }
 }
