--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,6 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MAX_RETRIES=3
 OPENAI_RETRY_DELAY=1000
 
+# Compute Job Queue Configuration
+COMPUTE_JOB_RETRY_POLICIES={"email-notification":{"maxAttempts":2,"backoff":{"type":"fixed","delay":1000}},"batch-operation":{"maxAttempts":5,"backoff":{"type":"exponential","delay":1000,"factor":1.5,"maxDelay":60000}},"data-processing":{"maxAttempts":3,"backoff":{"type":"linear","delay":2000,"maxDelay":10000}},"ai-computation":{"maxAttempts":4,"backoff":{"type":"exponential","delay":3000,"factor":2,"maxDelay":120000}}}
+
