--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.3.0",
+    "@types/bull": "^3.15.9",
     "@types/express": "^4.17.25",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.19.30",
