Added database integretion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "rootDir": "./src",
     "baseUrl": "./",
     "types": ["node", "jest"],
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
